--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "golfweather",
   "version": "1.1.1",
-  "description": "GolfWeather: An Ionic project",
+  "description": "GolfWeather",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
